# aapl

./: Cargo.toml  README.md  apl.ebnf
src/: data.rs  main.rs  reader.rs
src/data/: array.rs  number.rs
src/data/array/: tensor.rs
src/reader/: ast.rs  string.rs
