[package]
name = "aapl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.0"
derive_more = "0.99.17"
nom-unicode = "0.3.0"
rust_decimal = { version = "1.20.0", features = ["maths"]} 
rust_decimal_macros = "1.20"
num = "0.4.0"
tinyvec = {version = "1.5.1", features = ["rustc_1_40", "alloc"]}
nalgebra = "0.30.1"
